Renamed text size classes

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
             <div class="hero__text">
                 <h1 class="title">Jorge Ossa</h1>
                 <h2 class="title__description text--gradiant">Frontend developer and Visual designer</h2>
-                <p class="header__description m">A passionate designer and web developer, solving problems, and
+                <p class="header__description textSize__m">A passionate designer and web developer, solving problems, and
                     detail attention oriented.</p>
                 <div class="socialMediaBox">
                     <a class="email">
                         <img src="img/ant-design-mail-outlined.svg" alt="email icon" class="email__img">
-                        <p class="email__text s">jorgehossa@gmail.com</p>
+                        <p class="email__text textSize__s">jorgehossa@gmail.com</p>
                     </a>
                     <div class="socialMediaBox__secondRow">
                         <a class="linkedin">
                             <img src="img/ant-design-linkedin-outlined.svg" alt="linkedin icon" class="linkedin__img">
-                            <p class="linkedin__text s">jorgehossa</p>
+                            <p class="linkedin__text textSize__s">jorgehossa</p>
                         </a>
                         <a class="github">
                             <img src="img/ant-design-github-filled.svg" alt="github icon" class="github__img">
-                            <p class="github__text s">georgehossa</p>
+                            <p class="github__text textSize__s">georgehossa</p>
                         </a>
                         <a class="dribble">
                             <img src="img/ant-design-dribbble-outlined.svg" alt="dribble icon" class="dribble__img">
-                            <p class="dribble__text s">georgehossa</p>
+                            <p class="dribble__text textSize__s">georgehossa</p>
                         </a>
                     </div>
                 </div>
@@ -47,109 +47,109 @@
         <section class="mainDescription">
             <div class="experience">
                 <div class="contentBox">
-                    <h3 class="contentBox__title xl text--bold">Experience</h3>
-                    <h4 class="text--gradiant s">Sep. 2017 - Currently</h4>
-                    <span class="text--boldGray m">Web developer</span>
-                    <span class="text--gray m">Julius2Grow</span>
-                    <p class="contentBox__description s">- Help to administrate and maintain client's websites.</p>
-                    <p class="contentBox__description s"> - Administrate client web site implementing different
-                        solutions according to client needs using CMS's tools, HTML, CSS, and Javascript.</p>
+                    <h3 class="contentBox__title textSize__l text--bold">Experience</h3>
+                    <h4 class="text--gradiant textSize__s">Sep. 2017 - Currently</h4>
+                    <span class="text--boldGray textSize__m">Web developer</span>
+                    <span class="text--gray textSize__m">Julius2Grow</span>
+                    <p class="contentBox__description textSize__s">- Help to administrate and maintain client'textSize__s websites.</p>
+                    <p class="contentBox__description textSize__s"> - Administrate client web site implementing different
+                        solutions according to client needs using CMS'textSize__s tools, HTML, CSS, and Javascript.</p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h4 class="text--gradiant s">Dec. 2016 - Sep. 2017</h4>
-                    <span class="text--boldGray m">Creative director and SEM manager</span>
-                    <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design monthly key visuals for social media campaigns.</p>
+                    <h4 class="text--gradiant textSize__s">Dec. 2016 - Sep. 2017</h4>
+                    <span class="text--boldGray textSize__m">Creative director and SEM manager</span>
+                    <span class="text--gray textSize__m">Asimagen Comunicaciones</span>
+                    <p class="contentBox__description textSize__s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description textSize__s">- Design monthly key visuals for social media campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h4 class="text--gradiant s">Jul. 2016 - Dec. 2016</h4>
-                    <span class="text--boldGray m">Digital marketing manager and designer</span>
-                    <span class="text--gray m">Altotrafico</span>
-                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
+                    <h4 class="text--gradiant textSize__s">Jul. 2016 - Dec. 2016</h4>
+                    <span class="text--boldGray textSize__m">Digital marketing manager and designer</span>
+                    <span class="text--gray textSize__m">Altotrafico</span>
+                    <p class="contentBox__description textSize__s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description textSize__s">- Design and administrate social media accounts and campaigns.
                     </p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h4 class="text--gradiant s">Jul. 2015 - Jun. 2016</h4>
-                    <span class="text--boldGray m">Web designer</span>
-                    <span class="text--gray m">Nuclear Agencia Digital</span>
-                    <p class="contentBox__description s">- Admin clients SEM accounts on Facebook and Instagram.</p>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and campaigns.
+                    <h4 class="text--gradiant textSize__s">Jul. 2015 - Jun. 2016</h4>
+                    <span class="text--boldGray textSize__m">Web designer</span>
+                    <span class="text--gray textSize__m">Nuclear Agencia Digital</span>
+                    <p class="contentBox__description textSize__s">- Admin clients SEM accounts on Facebook and Instagram.</p>
+                    <p class="contentBox__description textSize__s">- Design and administrate social media accounts and campaigns.
                     </p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h4 class="text--gradiant s">Sep. 2013 - Jul. 2015</h4>
-                    <span class="text--boldGray m">Graphic designer</span>
-                    <span class="text--gray m">Asimagen Comunicaciones</span>
-                    <p class="contentBox__description s">- Design and administrate social media accounts and
+                    <h4 class="text--gradiant textSize__s">Sep. 2013 - Jul. 2015</h4>
+                    <span class="text--boldGray textSize__m">Graphic designer</span>
+                    <span class="text--gray textSize__m">Asimagen Comunicaciones</span>
+                    <p class="contentBox__description textSize__s">- Design and administrate social media accounts and
                         campaigns.</p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h4 class="text--gradiant s">Jun. 2005 - Sep. 2013</h4>
-                    <span class="text--boldGray m">Graphic designer</span>
-                    <span class="text--gray m">Corporación Industrial Minuto de Dios</span>
-                    <p class="contentBox__description s">- Design and maintain the brand, adapt it to company
+                    <h4 class="text--gradiant textSize__s">Jun. 2005 - Sep. 2013</h4>
+                    <span class="text--boldGray textSize__m">Graphic designer</span>
+                    <span class="text--gray textSize__m">Corporación Industrial Minuto de Dios</span>
+                    <p class="contentBox__description textSize__s">- Design and maintain the brand, adapt it to company
                         diferents channels and campaigns.</p>
-                    <p class="contentBox__description s">- Design and develop web site of the company.</p>
+                    <p class="contentBox__description textSize__s">- Design and develop web site of the company.</p>
                     <hr>
                 </div>
             </div>
 
             <div class="rightSideContent">
                 <div class="contentBox">
-                    <h3 class="contentBox__title xl text--bold">Skills</h3>
-                    <p class="contentBox__description s">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
+                    <h3 class="contentBox__title textSize__l text--bold">Skills</h3>
+                    <p class="contentBox__description textSize__s">Javascript - ReactJs - HTML - CSS - SASS - BEM - Git
                         -Github -
                         Webpack - Styled Components - Redux - UI design - Figma - Graphic design.</p>
                 </div>
 
                 <div class="contentBox">
-                    <h3 class="contentBox__title xl text--bold title--margin">Formation</h3>
-                    <h4 class="text--gradiant s">2020 - 2023</h4>
-                    <p class="text--boldGray m">Platzi Master - Frontend Developer</p>
-                    <p class="text--gray m GrayText--margin">Platzi</p>
+                    <h3 class="contentBox__title textSize__l text--bold title--margin">Formation</h3>
+                    <h4 class="text--gradiant textSize__s">2020 - 2023</h4>
+                    <p class="text--boldGray textSize__m">Platzi Master - Frontend Developer</p>
+                    <p class="text--gray textSize__m GrayText--margin">Platzi</p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h4 class="text--gradiant s">2004 - 2009</h4>
-                    <p class="text--boldGray m">Labor Technician in Digital Graphic Design Skills</p>
-                    <p class="text--gray m GrayText--margin">CESDE</p>
+                    <h4 class="text--gradiant textSize__s">2004 - 2009</h4>
+                    <p class="text--boldGray textSize__m">Labor Technician in Digital Graphic Design Skills</p>
+                    <p class="text--gray textSize__m GrayText--margin">CESDE</p>
                     <hr>
                 </div>
 
                 <div class="contentBox">
-                    <h3 class="contentBox__title xl text--bold title--margin">Language</h3>
-                    <p class="contentBox__description s">Spanish (Native)</p>
-                    <p class="contentBox__description s">English (Limited working proficiency)</p>
+                    <h3 class="contentBox__title textSize__l text--bold title--margin">Language</h3>
+                    <p class="contentBox__description textSize__s">Spanish (Native)</p>
+                    <p class="contentBox__description textSize__s">English (Limited working proficiency)</p>
                 </div>
 
                 <div class="contentBox">
-                    <h3 class="contentBox__title xl text--bold title--margin">Projects</h3>
+                    <h3 class="contentBox__title textSize__l text--bold title--margin">Projects</h3>
                     <a class="descriptionLinks">
-                        <p class="text--bold m">Hope-Tracker</p>
+                        <p class="text--bold textSize__m">Hope-Tracker</p>
                         <img src="img/ant-design-link-outlined.svg" alt="Hope-Tracker link">
                     </a>
-                    <p class="contentBox__description s">COVID app focused on recover cases per country.
+                    <p class="contentBox__description textSize__s">COVID app focused on recover cases per country.
                         React, React-Router, Github, Figma, React Chart.</p>
                     <a class="descriptionLinks">
-                        <p class="text--bold m descriptionLinks__paddingTop">Simple Weather Card App</p>
+                        <p class="text--bold textSize__m descriptionLinks__paddingTop">Simple Weather Card App</p>
                         <img src="img/ant-design-link-outlined.svg" alt="weather app link">
                     </a>
-                    <p class="contentBox__description s">Simple weather contentBox store the last city search.
+                    <p class="contentBox__description textSize__s">Simple weather contentBox store the last city search.
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
-                        
+
                 </div>
         </section>
     </div>
