Created 1st responsive test and a new test branch

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="base">
         <header class="hero">
             <div class="hero__text">
-                <h1 class="title">Jorge Ossa</h1>
-                <h2 class="title__description text--gradiant">Frontend developer and Visual designer</h2>
-                <p class="header__description textSize__m">A passionate designer and web developer, solving problems, and
+                <h1 class="herro__title">Jorge Ossa</h1>
+                <h2 class="hero__title__description text--gradiant">Frontend developer and Visual designer</h2>
+                <p class="hero__description textSize__m">A passionate designer and web developer, solving problems, and
                     detail attention oriented.</p>
                 <div class="socialMediaBox">
                     <a class="email">
