Closed a div in html and made better responsive test design

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                         Javascript, OOP, SASS, HTML, Webpack, Netlify.</p>
 
                 </div>
+            </div>
         </section>
     </div>
 </body>
