Changed section to article

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </header>
 
-        <section class="mainDescription">
+        <article class="mainDescription">
             <div class="experience">
                 <div class="contentBox">
                     <h3 class="contentBox__title textSize__12px text--bold">Experience</h3>
@@ -152,7 +152,7 @@
 
                 </div>
             </div>
-        </section>
+        </article>
     </div>
 </body>
 
