Made avatar img responsive

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="picture">
-                <img src="img/avatar-platz-1.png" alt="avatar">
+                <img class="avatarImg" src="img/avatar-platz-1.png" alt="avatar">
             </div>
         </header>
 
